# priv

./: .gitignore  DEMO.md  DEPLOY.md  PERFORMANCE.md  README.md  action.yml  docker-compose.yml  start.bat  start.sh
.claude/: launch.json
.github/workflows/: tmf-conformance.yml
backend/: .dockerignore  COMPLIANCE.md  conformance.py  eval.py  ingest.py  ingest_v2.py  knowledge_authority.py  knowledge_claims.py  knowledge_entities.py  knowledge_governance.py  knowledge_link.py  knowledge_relationships.py  knowledge_router.py  main.py  oda.py  oda_component_apis.json  oda_component_contract.py  oda_components.json  oda_ctk_adapter.py  oda_ctk_jobs.py  oda_ctk_results.py  oda_ctk_sanitize.py  requirements.txt  scaffold_demo.py  spec_facts.py  synaptdi_check.py  test_authority_engine.py  test_conformance.py  test_knowledge_engine.py  test_oda_catalog.py  test_oda_corpus.py  test_oda_ctk.py  test_oda_ctk_phase4_audit.py  test_oda_ctk_real_artifact.py  tmf_profile.py  validate_conformance.py  vectorstore.py  xray.py
backend/eval/: acceptance_7e.py  adversarial_eval.py  authority_eval.py  authority_eval_frozen.py  phase7_eval.py
backend/evals/: golden.yaml
demo/tmfc043-demo/: .dockerignore  README.md  app.py  demo-backend.sh  demo-preflight.sh  demo-run.sh  reconcile-status.sh
examples/: README.md
examples/2-portfolio-xray/: customer.yaml  (+1 more)
frontend/: Dockerfile
mcp-server/: README.md  synaptdi_mcp.py
sdk/: README.md  pyproject.toml
sdk/synaptdi/: __init__.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
(+77 files in other folders)
