[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "synaptdi"
version = "0.1.0"
description = "Python SDK for SynaptDI — TM Forum knowledge + deterministic Open API conformance, profile, scaffold and X-ray."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["tmforum", "tmf", "openapi", "conformance", "telecom", "oda"]
dependencies = []

[project.urls]
Homepage = "https://github.com/dibuAI/SynaptDI"

[tool.setuptools]
packages = ["synaptdi"]
